added sphere shapes

--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -58,6 +58,7 @@
     <ClInclude Include="render\gltypes.h" />
     <ClInclude Include="render\shape_cube.h" />
     <ClInclude Include="render\shape_fullquad.h" />
+    <ClInclude Include="render\shape_sphere.h" />
     <ClInclude Include="render\texture.h" />
     <ClInclude Include="render\texture2D.h" />
     <ClInclude Include="render\textureCube.h" />
@@ -114,6 +115,7 @@
     <ClCompile Include="render\shaderUniform.cpp" />
     <ClCompile Include="render\shape_cube.cpp" />
     <ClCompile Include="render\shape_fullquad.cpp" />
+    <ClCompile Include="render\shape_sphere.cpp" />
     <ClCompile Include="render\texture2D.cpp" />
     <ClCompile Include="render\textureCube.cpp" />
     <ClCompile Include="render\vertexarray.cpp" />
