removed rift support for now, perhaps I'll revisit this later

--- a/Overdrive/Overdrive.vcxproj
+++ b/Overdrive/Overdrive.vcxproj
@@ -81,7 +81,6 @@
     <ClInclude Include="util\threadsafeQueue.h" />
     <ClInclude Include="util\tuple.h" />
     <ClInclude Include="video\monitor.h" />
-    <ClInclude Include="video\oculusvr.h" />
     <ClInclude Include="video\video.h" />
     <ClInclude Include="video\videomode.h" />
     <ClInclude Include="video\window.h" />
@@ -132,7 +131,6 @@
     <ClCompile Include="util\exception_windows.cpp" />
     <ClCompile Include="util\spinlock.cpp" />
     <ClCompile Include="video\monitor.cpp" />
-    <ClCompile Include="video\oculusvr.cpp" />
     <ClCompile Include="video\video.cpp" />
     <ClCompile Include="video\videomode.cpp" />
     <ClCompile Include="video\window.cpp" />
@@ -242,7 +240,7 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;LibOVR.lib;</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
@@ -282,7 +280,7 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
     <Lib>
-      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;LibOVR.lib;</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>../dependencies/lib/$(Platform)</AdditionalLibraryDirectories>
